send parameter "name"

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to get Baked</h1>
+    <p>You can buy baked goods anywhere</p>
+    <a asp-controller="Shop" asp-action="Index" class="btn btn-primary">
+        Shop Now!
+    </a>
 </div>
