--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -5,3 +5,30 @@
 }
 
 <h1>Buy some Delicious baked goods</h1>
+
+<ul>
+    <li>
+        <a asp-controller="Shop" asp-action="ByCategory" asp-route-name="Breads">
+            Breads
+        </a>
+        
+    </li>
+
+    <li>
+        <a asp-controller="Shop" asp-action="ByCategory" asp-route-name="Cakes">
+        Cakes
+        </a>
+    </li>
+
+    <li>
+        <a asp-controller="Shop" asp-action="ByCategory" asp-route-name="Muffins">
+        Muffins
+        </a>
+    </li>
+
+    <li>
+        <a asp-controller="Shop" asp-action="ByCategory" asp-route-name="Gluten-free">
+            Gluten-free
+        </a>
+    </li>
+</ul>
