--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,15 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.btn-primary {
+    background-color: #007396;
+
+}
+.btn-primary:hover {
+    background-color: #73C1F5;
+}
+
+a{
+    color: coral;
+}
