--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -32,3 +32,14 @@ body {
 a{
     color: coral;
 }
+table.sortable th:hover {
+    cursor: pointer;
+}
+
+.thumb {
+    width: 100px;
+}
+
+.input-small {
+    width: 70px;
+}
