--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,9 +21,8 @@ body {
   margin-bottom: 60px;
 }
 
-.btn-primary {
+.btn-primary, .badge-primary {
     background-color: #007396;
-
 }
 .btn-primary:hover {
     background-color: #73C1F5;
